// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormTextArea /> Validation states should render the correct snapshots 1`] = `
<div
  className="fd-popover"
  style={
    Object {
      "display": "block",
    }
  }
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <div
        aria-controls="fd-Us_x8Fofp"
        aria-expanded={false}
        aria-haspopup={true}
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <textarea
          className="fd-textarea is-warning"
          onChange={[Function]}
          placeholder="Field placeholder text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<FormTextArea /> Validation states should render the correct snapshots 2`] = `
<div
  className="fd-popover"
  style={
    Object {
      "display": "block",
    }
  }
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <div
        aria-controls="fd-tjPvNiguz4"
        aria-expanded={false}
        aria-haspopup={true}
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <textarea
          className="fd-textarea is-error"
          onChange={[Function]}
          placeholder="Field placeholder text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<FormTextArea /> Validation states should render the correct snapshots 3`] = `
<div
  className="fd-popover"
  style={
    Object {
      "display": "block",
    }
  }
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <div
        aria-controls="fd-0O2WX2hIAk"
        aria-expanded={false}
        aria-haspopup={true}
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <textarea
          className="fd-textarea is-success"
          onChange={[Function]}
          placeholder="Field placeholder text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<FormTextArea /> Validation states should render the correct snapshots 4`] = `
<div
  className="fd-popover"
  style={
    Object {
      "display": "block",
    }
  }
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <div
        aria-controls="fd-VYj8SqEkcg"
        aria-expanded={false}
        aria-haspopup={true}
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <textarea
          className="fd-textarea is-information"
          onChange={[Function]}
          placeholder="Field placeholder text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<FormTextArea /> create form textarea 1`] = `
<div>
  <textarea
    className="fd-textarea"
    id="textarea-2"
    onChange={[Function]}
    value="Pellentesque metus lacus commodo eget justo ut rutrum varius nunc."
  />
</div>
`;

exports[`<FormTextArea /> create form textarea with counter 1`] = `
<div>
  <textarea
    className="fd-textarea"
    id="textarea-3"
    maxLength={150}
    onChange={[Function]}
  />
  <div
    className="fd-textarea-counter"
  >
    150 characters left
  </div>
</div>
`;
